          in autodie/CATEGORIES.  Thanks to Darren Duncan for spotting
          this.  (RT #39172)

        * DOCUMENTATION: The README file has been updated to reflect
          current minimum Perl versions (5.8.0) and current resources.

        * DOCUMENTATION: The closedir() function is properly
          documented as being included in the :filesys tag.

        * BUILD: Upgrade to Module::Intstall 0.77

1.992 Sun Sep  7 15:51:32 AUSEST 2008

        * BUGFIX: unlink(), rename(), chdir() and closedir() functions
          are now included in the :filesys tag.

        * BUGFIX: binmode() is now checked for failure as part of
          the :file tag.

        * BUGFIX: Using an unopened filehandle in an autodying
          built-in no longer triggers a spurious warning.

        * BUGFIX: RT #38845, corrected a missing space in the error
          produced by autodie when called with the ':void' switch.
          Many thanks to Matt Kraai for the patch!

        * FEATURE: The dbmopen() and dbmclose() functions are now
          supported in their own :dbm tag.  This is part of :io
          (and hence :default).

        * FEATURE: The dbmopen() built-in has its own formatter,
          which ensures errors always display the mask in octal,
          not decimal.

        * DOCUMENTATION: The :filesys tag is properly documented.

        * DOCUMENTATION: Added link to Perl tip on autodie.

        * TEST: RT #38845, t/internal.t updated to detect malformed error
          messages involving the mixing of ':void' and autodie.

1.991 Fri Aug 22 23:57:24 AUSEST 2008

        * BUGFIX: RT #38614, stringified autodie::exceptions objects
          now always end with a newline.  Thanks to Offer Kaye for the
          report.

        * BUGFIX: Makefile.PL is no longer executable.

        * BUGFIX: 'chdir' added to defaults, and the :filesys group.

        * BUGFIX: RT #38598, the errno attribute on autodie::exception
          objects is now correctly set.
