@@ -12,6 +12,10 @@ Revision history for autodie
         * DOCUMENTATION: The closedir() function is properly
           documented as being included in the :filesys tag.
 
+        * DOCUMENTATION: Feedback section added to the autodie
+          documentation.  If you find the module useful, consider
+          saying so on cpanratings.perl.org, or dropping me a note.
+
         * BUILD: Upgrade to Module::Intstall 0.77
 
 1.992 Sun Sep  7 15:51:32 AUSEST 2008
